@@ -1,4 +1,4 @@
-# Alien::Build::Git ![linux](https://github.com/PerlAlien/Alien-Build-Git/workflows/linux/badge.svg) ![windows](https://github.com/PerlAlien/Alien-Build-Git/workflows/windows/badge.svg) ![macos](https://github.com/PerlAlien/Alien-Build-Git/workflows/macos/badge.svg)
+# Alien::Build::Git ![static](https://github.com/PerlAlien/Alien-Build-Git/workflows/static/badge.svg) ![linux](https://github.com/PerlAlien/Alien-Build-Git/workflows/linux/badge.svg) ![windows](https://github.com/PerlAlien/Alien-Build-Git/workflows/windows/badge.svg) ![macos](https://github.com/PerlAlien/Alien-Build-Git/workflows/macos/badge.svg)
 
 Alien::Build tools for interacting with git
 
@@ -56,7 +56,7 @@ Graham Ollis <plicease@cpan.org>
 
 # COPYRIGHT AND LICENSE
 
-This software is copyright (c) 2017 by Graham Ollis.
+This software is copyright (c) 2017,2018,2019,2022 by Graham Ollis.
 
 This is free software; you can redistribute it and/or modify it under
 the same terms as the Perl 5 programming language system itself.
